# haskell-from-first-principles

./: .gitignore  FunctionWithLet.hs  FunctionWithWhere.hs  README.md  ch2.md  lambda_calculus.md  learn.hs  practice.hs  test.hs
addition/: Addition.cabal  addition.cabal.save0  addition.cabal.save1
ch10_folds/: ch10.md  database.hs  factorial.hs  fib.hs  folds.hs  triples.hs
ch11_algebraic_data_types/: asPatterns.hs  binaryTreeFolds.hs  binaryTreeMap.hs  binaryTreeToList.hs  ch11.md  dataTypes.hs  example.hs  exampleNormalForm.hs  exerciseConsructingValues.hs  huttonsRazor.hs  jammin.hs  languageExercises.hs  newtype.hs  newtype2.hs  normal_form.hs  phoneExercise.hs  product_types.hs  sum_types.hs  types_and_data.hs  unaryDataConstructor.hs  vigenereCipher.hs
ch12_signaling_adversity/: anamorphisms.hs  ch12.md  eitherLibrary.hs  maybeLibrary.hs  numsAndInts.hs  stringProcessing.hs  validateWord.hs
ch13_building_projects/: ch13.md
ch14_testing/: additionProperties.hs  ch14.md  exponentiation.hs  foldrTests.hs  idempotence.hs  maybeAndEitherGenerators.hs  question2.hs  quickCheckExamples.hs  quotRemDivMod.hs  readShow.hs  reverseList.hs  squareIdentity.hs  takeN.hs  testingDivision.hs  testingMultiplication.hs
ch14_testing/morse_code/: CHANGELOG.md  morse-code.cabal
ch14_testing/morse_code/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ch14_testing/morse_code/src/: Main.hs  Morse.hs
ch15_monoid_semigroup/: ch15.md  madlibs.hs  optionalMonoid.hs
ch16_functors/: Semigroups.hs  ch16.md  liftingExercises.hs
ch17_applicatives/: ch17.md  constantApplicative.hs  identityApplicative.hs  listApplicative.hs  p678Exercise.hs  ziplistApplicative.hs
ch18_monads/: ch18.md  maybeMonad.hs
ch20_foldable/: ch20.md  filterFunction.hs  foldableFunctions.hs  foldableIdentity.hs  foldableInstances.hs  foldableMaybe.hs
ch21_traversable/: ConstantTraversable.hs  IdentityTraversable.hs  ListTraversable.hs  MaybeTraversable.hs  STraversable.hs  ThreeTraversable.hs  TreeTraversable.hs  ch21.md  eitherTraversable.hs  httpExamples.hs  moreExamples.hs  quickCheckTests.hs  sampleCode.hs  sequenceA.hs  tupleTraversable.hs
ch22_reader/: AnotherExercise.hs  ExampleUseCase.hs  MyLiftA2.hs  Reader.hs  ReaderApplicative.hs  ReaderMonad.hs  ReaderPractice.hs  ShortExercise.hs  SimpleExercise.hs  (+3 more)
ch24_parser_combinators/learnparsers/: myproject.cabal
ch24_parser_combinators/learnparsers/app/: AltParsing.hs  ExerciseP857.hs  LearnParsers.hs  ParsingFractions.hs
(+104 files in other folders)
