cabal-version:      2.4
name:               morse-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tangjm
maintainer:         jaredtang@hotmail.co.uk

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files: CHANGELOG.md


library 
    exposed-modules:   Morse
    ghc-options:       -Wall -fwarn-tabs
    build-depends:     base ^>=4.14.3.0
                    , containers
                    , QuickCheck
    hs-source-dirs:    src 
    default-language:  Haskell2010 

executable morse-code
    main-is:          Main.hs
    ghc-options:       -Wall -fwarn-tabs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , morse-code
                    , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    ghc-options:      -Wall -fno-warn-orphans
    type:             exitcode-stdio-1.0
    main-is:          tests.hs
    hs-source-dirs:   tests
    build-depends:    base
                    , containers
                    , morse-code
                    , QuickCheck
    default-language: Haskell2010

